# wormhole-gui

./: .gitignore  CLAUDE.md  README.md  RELEASE.md  index.html  latest.json  wormhole-gui-architecture.md
.github/workflows/: ci.yml  release.yml
wormhole-gui/: Cargo.toml
wormhole-gui/core/: Cargo.toml
wormhole-gui/core/src/: error.rs  lib.rs  protocol.rs  session.rs  storage.rs  transfer.rs
wormhole-gui/core/tests/: integration.rs
wormhole-gui/tauri-app/: index.html  package.json  pnpm-lock.yaml  vite.config.js
wormhole-gui/tauri-app/src/: App.svelte  main.js  styles.css
wormhole-gui/tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
wormhole-gui/tauri-app/src-tauri/capabilities/: default.json
wormhole-gui/tauri-app/src-tauri/keys/: updater.pub
wormhole-gui/tauri-app/src-tauri/src/: bridge.rs  commands.rs  config.rs  lib.rs  main.rs  updater.rs  updater_cmd.rs
wormhole-gui/tauri-app/src/lib/: Icon.svelte  ipc.js  store.js
wormhole-gui/tauri-app/src/lib/components/: Bubble.svelte  CodeBanner.svelte  Composer.svelte  FileCard.svelte  SimpleHeader.svelte  TopBar.svelte  UpdateBanner.svelte
wormhole-gui/tauri-app/src/lib/i18n/: en.json  index.js  zh.json
wormhole-gui/tauri-app/src/lib/screens/: Allocator.svelte  Closed.svelte  Connecting.svelte  Error.svelte  Idle.svelte  Joiner.svelte  Sas.svelte  Session.svelte  Settings.svelte
wormhole-spike/: Cargo.toml
wormhole-spike/src/: bridge.rs  main.rs
