[workspace]
resolver = "2"
members = ["core", "tauri-app/src-tauri"]

[workspace.package]
version = "0.2.2"
edition = "2021"
license = "MIT"
authors = ["lemon"]
repository = "https://github.com/lemond-dev/chat_one"

[workspace.dependencies]
magic-wormhole = { version = "0.8", default-features = false, features = ["transit", "transfer"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
futures = "0.3"
smol = "2"
async-channel = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

[profile.release]
opt-level = 3
lto = false
codegen-units = 16
strip = "symbols"
