[package]
name = "wormhole-gui-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
magic-wormhole.workspace = true
# Adds `async-native-tls` feature to async-tungstenite so magic_wormhole's
# smol-based mailbox connection can do wss:// (the smol module gates TLS
# on `feature = "async-native-tls"`, not on `smol-native-tls`).
async-tungstenite.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
futures.workspace = true
smol.workspace = true
async-channel.workspace = true
tracing.workspace = true

# Numeric short-code generation (allocator path).
rand = "0.8"
